# earmark-kernel

./: .gitignore  CLI_CONTRACT_CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HACK_AND_TELL.md  LICENSE  Makefile  README.md  RELEASE.md  SECURITY.md  build_errors.txt  earmark-nix.sh  final_list.json  flake.nix  oids_proposed.txt  oids_ready.txt  opencode.json  raw_active_list.txt  tasks_to_clean.json  warnings.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  design_decision.yml  documentation.yml
.github/workflows/: ci.yml
.opencode/commands/: execute-manifest.md
.orchestration/: README.md
docs/: architecture.md  cli-contract.md  kernel_contract.md  limitations.md  refactor_cleanup.md
docs/architecture/: canonical-spine.md  derived-index.md  runtime-subset.md  write-paths.md
docs/concepts/: context-compilation.md  coordinated-ai-work.md  declared-delegation.md  failures.md  handoffs.md  native-orchestration.md  relation-authorization.md  staged-execution.md  standing.md  store-index-contract.md
docs/declarations/: README.md  REFERENCE.md
docs/examples/: evidence-extraction.md  multi-stage-synthesis.md  triage-and-routing.md
docs/governance/: README.md  acceptance_gates.md  constitution.md  hardening_checklist.md  main_replacement_readiness.md
docs/internal/: pruning-decisions.md  (+5 more)
dogfooding/: provider-plugin-history-2026-05-26.md
earmark/: Cargo.toml
earmark-cli/: CONFIG.md  Cargo.toml
earmark-cli/src/: app.rs  cli.rs  config.rs  logging.rs  main.rs  metrics.rs  output.rs
earmark-cli/src/app/: bootstrap.rs  common.rs  dispatch.rs  emitter.rs  graph.rs  listing.rs  loaders.rs  mod.rs  reports.rs  resolve.rs  scaffold.rs  suggestions.rs
earmark-cli/src/app/commands/: context.rs  declarations.rs  deposit.rs  init_doctor.rs  mod.rs  orchestration.rs  query.rs  review.rs  system.rs  undo.rs  workflow.rs
earmark-cli/src/app/commands/orchestration/: common.rs  context.rs  gates.rs  git.rs  graph.rs  ingest.rs  mod.rs  parsers.rs  review.rs  view.rs
earmark-cli/src/app/commands/orchestration/adapters/: engram.rs  mod.rs  native_json.rs
earmark-cli/src/app/dispatch/: handlers.rs  mod.rs
earmark-cli/src/app/handler/: context.rs  deposit.rs  mod.rs  query.rs  report.rs  system.rs
earmark-cli/src/cli/: core.rs  declarations.rs  execution.rs  governance.rs  orchestration.rs  provider.rs  reports.rs
earmark-cli/tests/: authorization.rs  cli.rs  demo_path_handoff_artifacts.rs  drift.rs  explain_contracts.rs  inspection.rs  output_contracts.rs  provider_observability.rs  relation_inspection.rs  selector_determinism.rs  smoke.rs  standing_request.rs  wp05_topology_demo.rs  wp08_negative_contracts.rs  wp09_orchestration_native.rs  wp10_orchestration_schemas.rs  wp11_relation_wiring.rs  wp12_orchestration_lifecycle.rs
earmark-connected-context/: Cargo.toml
earmark-connected-context/src/: filter.rs  lib.rs
earmark-core/: Cargo.toml
earmark-core/src/: context.rs  declarations.rs  docs.rs  errors.rs  ids.rs  kind.rs  lib.rs  object.rs  projection.rs  provider.rs  relations.rs  runtime.rs  serde_helpers.rs  standing.rs  system.rs  validation.rs  values.rs
earmark-core/src/records/: archive.rs  core.rs  declarations.rs  governance.rs  migration.rs  mod.rs  provider.rs  runtime.rs  signal.rs  worker.rs
earmark-core/tests/: invariants.proptest-regressions  invariants.rs  schema_roundtrip.rs  stage7_edge_cases.rs
earmark-declarations/: Cargo.toml
earmark-declarations/src/: dev_pack.rs  errors.rs  lib.rs  portfolio_pack.rs  registry.rs  resolver.rs  traits.rs  validation.rs
earmark-declarations/tests/: dev_pack_test.rs  validation.rs  validation_invariants.rs  wp07_workflow_resolution.rs
earmark-exec/: Cargo.toml
earmark-exec/src/: async_prep.rs  engine.rs  error.rs  gemini.rs  governance_ops.rs  handoff.rs  helpers.rs  http_generation.rs  ir.rs  lib.rs  persistence.rs  persistence_helpers.rs  projection.rs  provider.rs  provider_plugins.rs  redaction.rs  relation.rs  relation_authorization.rs  relation_logic.rs  resolution.rs  state.rs  tests.rs  transition.rs  validation.rs
earmark-exec/tests/: dispatch.rs  e2e_staged.rs  engine.rs  engine_advanced.rs  runtime_contract.rs  stage7_exec_edge_cases.rs  wp01_integrity.rs  wp02_relations.rs  wp03_provider_budget.rs  wp03_standing_lifecycle.rs  wp04_handoff_context.rs  wp05_provider_policy.rs  wp05_visibility.rs  wp06_governance_enforcement.rs  wp06_http_e2e.rs  wp06_http_provider.rs  wp06_safety_api_cleanups.rs
earmark-exec/tests/engine/: error_handling.rs  handoffs.rs  lifecycle.rs  transitions.rs
earmark-governance/: Cargo.toml
earmark-governance/src/: lib.rs
earmark-index/: Cargo.toml
earmark-index/src/: dirty.rs  errors.rs  lib.rs  sqlite_index.rs  surreal_index.rs  traits.rs
earmark-index/tests/: indexing.rs  wp04_index_dirty_recovery.rs
earmark-runtime-tools/: Cargo.toml  check_out.txt
earmark-runtime-tools/src/: lib.rs  tests.rs
earmark-runtime-tools/src/modules/: context.rs  deposit.rs  error.rs  mod.rs  query.rs  relation_rules.rs  relations.rs  surface.rs  workflow.rs
earmark-runtime-tools/tests/: test_boundary_validation.rs  test_schema_enforcement.rs
earmark-store/: Cargo.toml
earmark-store/src/: archive.rs  authorization.rs  backend.rs  errors.rs  file_store.rs  ledger.rs  lib.rs  migration.rs  sanctioned.rs  traits.rs
earmark-store/tests/: archive_round_trip.rs  archive_roundtrip.rs  authorization.rs  deterministic_replay.rs  hardening.rs  integrity_faults.rs  repro_traversal.rs  storage.rs  store_invariant_tests.rs  store_invariants.rs  store_property_tests.rs
earmark/src/: lib.rs
earmark/tests/: facade.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: id_parsing.rs  markdown_unwrap.rs  record_parsing.rs  yaml_parsing.rs
perf-bench/: Cargo.toml
perf-bench/benches/: earmark-bench.rs
scripts/: allocation_audit.sh  audit_licenses.sh  dispatch-native.sh  dispatch-opencode-engram.sh  dispatch-opencode.sh  live_google_ai_gemma_smoke.sh  run-self-hosting-cycle.sh  smoke-opencode-big-pickle.sh  smoke_quickstart.sh
(+209 files in other folders)
