[workspace]
resolver = "2"
members = [
  "earmark-core",
  "earmark-store",
  "earmark-index",
  "earmark-declarations",
  "earmark-exec",
  "earmark-governance",
  "earmark-connected-context",
  "earmark-cli",
  "earmark-runtime-tools",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["OpenAI"]
license = "AGPL-3.0-or-later OR LicenseRef-Commercial"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
git2 = "0.19"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
