[workspace]
resolver = "2"
members = [
  "earmark-core",
  "earmark-store",
  "earmark-index",
  "earmark-declarations",
  "earmark-governance",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Mikhail Shakhnazarov"]
license = "AGPL-3.0-or-later"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
rusqlite = "0.33"
walkdir = "2.5"
tempfile = "3.10"
proptest = "1.4"
fs4 = "0.12"

[profile.dev]
debug = 1

[profile.test]
debug = 1
