[workspace]
resolver = "2"
members = [
  "earmark-core",
  "earmark-store",
  "earmark-index",
  "earmark-declarations",
  "earmark-governance",
  "fuzz", "perf-bench",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Mikhail Shakhnazarov"]
license = "AGPL-3.0-or-later"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
metrics = "0.22"
serde_yaml = "0.9"
uuid = { version = "1.8", features = ["v4", "serde"] }
sha2 = "0.10"
surrealdb = { version = "3.1.2", features = ["kv-surrealkv"] }
async-trait = "0.1.80"
futures = "0.3"
tokio = { version = "1.36", features = ["full"] }
rusqlite = "0.33"
walkdir = "2.5"
tempfile = "3.10"
proptest = "1.4"
fs4 = "0.12"

[profile.dev]
debug = 1

[profile.test]
debug = 1

[patch."https://github.com/Mikhail-Shakhnazarov/earmark-workspace"]
earmark-core = { path = "earmark-core" }
earmark-store = { path = "earmark-store" }
earmark-index = { path = "earmark-index" }
earmark-declarations = { path = "earmark-declarations" }
