[package]
name = "earmark-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
earmark-core = { path = "../earmark-core" }
earmark-store = { path = "../earmark-store" }
earmark-index = { path = "../earmark-index" }
earmark-declarations = { path = "../earmark-declarations" }
earmark-connected-context = { path = "../earmark-connected-context" }
earmark-exec = { path = "../earmark-exec" }
earmark-governance = { path = "../earmark-governance" }
earmark-runtime-tools = { path = "../earmark-runtime-tools" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
