[package]
name = "earmark-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
earmark-core = { path = "../earmark-core" }
earmark-store = { path = "../earmark-store" }
earmark-index = { path = "../earmark-index" }
earmark-declarations = { path = "../earmark-declarations" }
earmark-connected-context = { path = "../earmark-connected-context" }
earmark-exec = { path = "../earmark-exec" }
earmark-governance = { path = "../earmark-governance" }
earmark-runtime-tools = { path = "../earmark-runtime-tools" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
thiserror.workspace = true
chrono.workspace = true
toml = "0.8"
clap_complete = "4.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true

[features]
default = ["http-provider"]
http-provider = ["earmark-exec/http-provider"]
gemini = ["earmark-exec/gemini"]
