[package]
name = "earmark-connected-context"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
earmark-core = { path = "../earmark-core" }
earmark-store = { path = "../earmark-store" }
earmark-index = { path = "../earmark-index" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
