[package]
name = "earmark-exec"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
earmark-core = { path = "../earmark-core" }
earmark-store = { path = "../earmark-store" }
earmark-index = { path = "../earmark-index" }
earmark-connected-context = { path = "../earmark-connected-context" }
earmark-governance = { path = "../earmark-governance" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }

[features]
gemini = ["dep:reqwest"]

[dev-dependencies]
tempfile.workspace = true
earmark-runtime-tools = { path = "../earmark-runtime-tools" }
