[package]
name = "earmark-exec"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
earmark-core = { path = "../earmark-core" }
earmark-store = { path = "../earmark-store" }
earmark-index = { path = "../earmark-index" }
earmark-connected-context = { path = "../earmark-connected-context" }
earmark-governance = { path = "../earmark-governance" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
thiserror.workspace = true
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }

[features]
http-provider = ["dep:reqwest"]
gemini = ["http-provider"]

[dev-dependencies]
httpmock = "0.7"
tempfile.workspace = true
earmark-runtime-tools = { path = "../earmark-runtime-tools" }
earmark-declarations = { path = "../earmark-declarations" }
