[package]
name = "earmark-index"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
earmark-core = { path = "../earmark-core" }
earmark-store = { path = "../earmark-store" }
rusqlite = { version = "0.33", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
