[package]
name = "earmark-runtime-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
earmark-core = { path = "../earmark-core" }
earmark-store = { path = "../earmark-store" }
earmark-index = { path = "../earmark-index" }
earmark-declarations = { path = "../earmark-declarations" }
earmark-connected-context = { path = "../earmark-connected-context" }
earmark-exec = { path = "../earmark-exec" }
earmark-governance = { path = "../earmark-governance" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
