[package]
name = "earmark-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
earmark-core = { path = "../earmark-core" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
thiserror.workspace = true
gix = { workspace = true, features = ["tree-editor"] }
walkdir.workspace = true
fs4 = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
