[package]
name = "earmark-store"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
earmark-core = { path = "../earmark-core" }
earmark-declarations = { path = "../earmark-declarations" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
earmark-index = { path = "../earmark-index" }
tempfile.workspace = true
