[package]
name = "earmark-store"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
earmark-core = { path = "../earmark-core" }
earmark-declarations = { path = "../earmark-declarations" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
uuid.workspace = true
metrics.workspace = true
fs4.workspace = true

[dev-dependencies]
earmark-index = { path = "../earmark-index" }
tempfile.workspace = true
proptest.workspace = true
