[package]
name = "earmark-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[profile.test]
debug = 1

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
earmark-core = { path = "../earmark-core" }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.6", features = ["derive"] }

[[bin]]
name = "id_parsing"
path = "fuzz_targets/id_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "record_parsing"
path = "fuzz_targets/record_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "markdown_unwrap"
path = "fuzz_targets/markdown_unwrap.rs"
test = false
doc = false
bench = false

[[bin]]
name = "yaml_parsing"
path = "fuzz_targets/yaml_parsing.rs"
test = false
doc = false
bench = false
